--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,16 @@
   }
 }
 
+.bg_product::after {
+  background: rgba(15, 17, 17, 0.03);
+  border-radius: 4px;
+  content: "";
+  height: 100%;
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+}
+
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities;
